fix collage gap

--- a/components/Sections/SectionFinalSurprise/components/CollageComponents/styles.module.scss
+++ b/components/Sections/SectionFinalSurprise/components/CollageComponents/styles.module.scss
@@ -1,3 +1,10 @@
 .masonryLayout {
   margin-top: 2rem;
 }
+
+@media (max-width: 768px) {
+  .masonryLayout {
+    margin-top: 1rem;
+    padding-inline: 1rem;
+  }
+}
