--- a/components/Sections/SectionFinalSurprise/section/styles.module.scss
+++ b/components/Sections/SectionFinalSurprise/section/styles.module.scss
@@ -9,7 +9,7 @@
 @media (max-width: 768px) {
   .section {
     width: 100%;
-
+    padding-inline: 0;
     align-items: center;
   }
 }
